@@ -1,382 +1,205 @@
-```markdown
-# Hotel Management Microservices (Reactive)
+# Agoda Microservices
 
-A modern, reactive microservices-based hotel management system built with **Spring Boot 3**,
-**Java 21**, and **Project Reactor**. Features fully non-blocking, reactive architecture with WebFlux.
+**A modern reactive hotel management microservices platform** inspired by Agoda’s booking system.
 
-## 🏗️ Reactive Architecture
+Built with **Spring Boot 3**, **Java 21**, **WebFlux**, and **Project Reactor** for fully non-blocking, high-performance operations.
 
-```
-┌─────────────────────────────────────────────────────────────┐
-│                    Client (Browser/App)                     │
-└───────────────────────┬─────────────────────────────────────┘
-                        │ (Reactive HTTP/WebSocket)
-┌───────────────────────▼─────────────────────────────────────┐
-│              Reactive API Gateway                            │
-│        (Spring Cloud Gateway - WebFlux)                     │
-└───────┬──────────────┬──────────────┬──────────────┬────────┘
-        │              │              │              │
-┌───────▼─────┐ ┌─────▼──────┐ ┌─────▼──────┐ ┌─────▼──────┐
-│ Guest       │ │ Booking    │ │ Room       │ │ Payment    │
-│ Service     │ │ Service    │ │ Service    │ │ Service    │
-│ (WebFlux)   │ │ (WebFlux)  │ │ (WebFlux)  │ │ (WebFlux)  │
-└───────┬─────┘ └─────┬──────┘ └─────┬──────┘ └─────┬──────┘
-        │              │              │              │
-    ┌───▼───┐      ┌──▼──┐       ┌───▼──┐      ┌───▼──┐
-    │R2DBC  │      │Redis│       │Mongo │      │Kafka │
-    │MySQL  │      │Cache│       │DB    │      │Stream│
-    └───────┘      └─────┘       └──────┘      └──────┘
+---
+
+## Recent Update
+- **OpenFeign Migration** (July 2026): Replaced reactive `WebClient` with **Spring Cloud OpenFeign** + Resilience4j for improved maintainability, retries, and circuit breaking.
+
+## 🏗️ Architecture
+
+```mermaid
+flowchart TD
+    Client[Client / Frontend] --> Gateway[API Gateway<br/>Spring Cloud Gateway + WebFlux]
+    Gateway --> Discovery[Eureka Discovery Server]
+    
+    subgraph Microservices
+        Guest[Guest Service]
+        Booking[Booking Service]
+        Room[Room Service]
+        Payment[Payment Service]
+        Loyalty[Loyalty Service]
+        Inventory[Inventory Management]
+        Staff[Staff Service]
+        Audit[Audit Monitoring]
+    end
+    
+    Gateway --> Microservices
+    Microservices --> Databases[(R2DBC / Redis / MongoDB)]
+    Microservices --> Kafka[Kafka Events]
 ```
 
 ## 🚀 Tech Stack
 
-### Core Technologies
-- **Java 21** (with Virtual Threads & Pattern Matching)
-- **Spring Boot 3.2+** (Reactive Stack)
-- **Project Reactor** (Reactive Programming)
-- **Spring WebFlux** (Non-blocking REST)
-- **Spring Cloud 2023.0+** (Microservices)
+- **Java 21** (Virtual Threads, Records, Pattern Matching)
+- **Spring Boot 3.2+** + **Spring WebFlux**
+- **Project Reactor** (`Mono` / `Flux`)
+- **Spring Cloud** (Eureka, Gateway, OpenFeign, Resilience4j)
+- **R2DBC** (MySQL / PostgreSQL)
+- **Reactive Redis** & **Reactive MongoDB**
+- **Kafka** (Reactive Streams)
+- **Docker** + **Docker Compose**
 
-### Reactive Data
-- **R2DBC** (Reactive SQL - MySQL/PostgreSQL)
-- **Redis Reactive** (Caching)
-- **MongoDB Reactive** (NoSQL)
-- **Kafka Reactive Streams** (Event streaming)
+## 📦 Services
 
-### Infrastructure
-- **Netty** (Non-blocking server)
-- **Docker & Docker Compose**
-- **Eureka Discovery** (Service registry)
-- **Resilience4j** (Circuit Breaker)
-
-## 📦 Services Overview
-
-| Service | Port | Reactive Features | Database |
-|---------|------|-------------------|----------|
-| `discovery-server` | 8761 | - | In-memory |
-| `api-gateway` | 8080 | WebFlux Routes, Reactive Filters | - |
-| `guest-service` | 8081 | WebFlux Controllers, R2DBC | MySQL |
-| `booking-service` | 8082 | WebFlux, Reactive Redis, Kafka Streams | MySQL + Redis |
-| `room-service` | 8083 | WebFlux, R2DBC, Reactive Caching | PostgreSQL |
-| `payment-service` | 8084 | WebFlux, Reactive Transactions | MySQL |
-| `loyalty-service` | 8085 | WebFlux, R2DBC | PostgreSQL |
-| `service-management` | 8086 | WebFlux, Reactive MongoDB | MongoDB |
-| `inventory-management` | 8087 | WebFlux, R2DBC | MySQL |
-| `staff-service` | 8088 | WebFlux, R2DBC | PostgreSQL |
-| `audit-monitoring` | 8089 | WebFlux, Reactive Kafka | Elasticsearch |
+| Service                | Port  | Key Technologies                     | Database          |
+|------------------------|-------|--------------------------------------|-------------------|
+| `discovery-server`     | 8761  | Eureka Server                        | -                 |
+| `api-gateway`          | 8080  | Spring Cloud Gateway, WebFlux        | -                 |
+| `Guest-Service`        | 8081  | WebFlux, OpenFeign, R2DBC            | MySQL             |
+| `booking-service`      | 8082  | Redis, Kafka                         | MySQL + Redis     |
+| `room-service`         | 8083  | R2DBC, Caching                       | PostgreSQL        |
+| `payment-service`      | 8084  | Reactive Transactions                | MySQL             |
+| `Loyalty-Service`      | 8085  | R2DBC                                | PostgreSQL        |
+| `inventory-management` | 8087  | R2DBC                                | MySQL             |
+| `staff-service`        | 8088  | R2DBC                                | PostgreSQL        |
+| `audit-monitoring`     | 8089  | Reactive Kafka                       | Elasticsearch     |
 
 ## 🚀 Quick Start
 
 ### Prerequisites
-- **Java 21** (OpenJDK 21 or higher)
-- **Maven 3.9+** or **Gradle 8.5+**
-- **Docker & Docker Compose** (recommended)
-- **Reactive-ready databases** (MySQL 8+, PostgreSQL 15+)
+- Java 21
+- Maven 3.9+
+- Docker & Docker Compose (recommended)
 
 ### Option 1: Docker Compose (Recommended)
+
 ```bash
-# Start all services with reactive databases
-docker-compose -f reactive-compose.yml up -d
-
-# Check services
-docker-compose ps
-
-# View logs
-docker-compose logs -f discovery-server
+git clone https://github.com/VicheaStack/Agoda-Microservice.git
+cd Agoda-Microservice
+docker compose up -d --build
 ```
 
 ### Option 2: Run Locally
+
 ```bash
-# 1. Start reactive databases
-docker run -d --name mysql-reactive -p 3306:3306 \
-  -e MYSQL_ROOT_PASSWORD=reactivepass mysql:8.0
+# Start databases first
+docker run -d -p 3306:3306 --name mysql -e MYSQL_ROOT_PASSWORD=reactivepass mysql:8.0
+docker run -d -p 6379:6379 redis:7-alpine
 
-docker run -d --name redis-reactive -p 6379:6379 redis:7-alpine
-
-# 2. Start Discovery Server (Eureka)
-cd discovery-server
-mvn spring-boot:run -Dspring-boot.run.jvmArguments="--enable-preview"
-
-# 3. Start API Gateway
-cd api-gateway
-mvn spring-boot:run -Dspring-boot.run.jvmArguments="--enable-preview"
-
-# 4. Start other services (each in separate terminal)
-cd guest-service
-mvn spring-boot:run -Dspring-boot.run.jvmArguments="--enable-preview"
+# Run services (in separate terminals)
+cd discovery-server && ./mvnw spring-boot:run
+cd ../api-gateway && ./mvnw spring-boot:run
+cd ../Guest-Service && ./mvnw spring-boot:run
+# ... repeat for other services
 ```
 
-## 🔧 Configuration
+## 🔧 Configuration Example (`application.yml`)
 
-### Reactive Database (application.yml example)
 ```yaml
+server:
+  port: 8081
+
 spring:
+  application:
+    name: guest-service
   r2dbc:
     url: r2dbc:mysql://localhost:3306/hotel_db
-    username: reactive_user
-    password: reactive_pass
-    pool:
-      max-size: 20
-      initial-size: 5
-  
-  data:
-    redis:
-      reactive:
-        host: localhost
-        port: 6379
-  
-  kafka:
-    bootstrap-servers: localhost:9092
-    consumer:
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-```
-
-### Java 21 Features Enabled
-```java
-// Virtual Threads configuration
-spring:
+    username: root
+    password: reactivepass
   threads:
     virtual:
       enabled: true
 
-// Java 21 preview features
-maven.compiler.release: 21
-maven.compiler.parameters: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+spring:
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled: true
 ```
 
-## 📁 Project Structure
+## 📁 Project Structure (Example - Guest-Service)
 
 ```
-hotel-management-microservices/
-├── discovery-server/          # Service discovery
-├── api-gateway/              # Reactive API Gateway
-├── guest-service/            # Reactive guest management
-│   ├── src/main/java/com/hotel/guest/
-│   │   ├── controller/       # WebFlux @RestController
-│   │   ├── service/          # Reactive service layer
-│   │   ├── repository/       # R2DBC reactive repositories
-│   │   ├── entity/          # Reactive entities
-│   │   └── config/          # WebClient, Security config
-│   └── src/main/resources/
-│       └── application.yml   # R2DBC config
-├── booking-service/          # Reactive booking with Kafka
-├── room-service/            # Reactive room management
-└── docker/                  # Reactive database containers
-    ├── mysql-reactive.yml
-    ├── redis-reactive.yml
-    └── kafka-reactive.yml
+Guest-Service/
+├── src/main/java/com/group/learn/guest/
+│   ├── controller/
+│   ├── service/
+│   ├── repository/      # Reactive repositories
+│   ├── client/          # OpenFeign clients
+│   ├── dto/
+│   ├── entity/
+│   └── config/
+├── src/main/resources/application.yml
+├── Dockerfile
+└── pom.xml
 ```
 
-## 🔌 Reactive API Examples
+## 🔌 API Example
 
-### Guest Service (WebFlux)
 ```java
 @RestController
 @RequestMapping("/api/guests")
+@RequiredArgsConstructor
 public class GuestController {
-    
+
+    private final GuestService guestService;
+    private final BookingClient bookingClient; // OpenFeign
+
     @GetMapping(produces = MediaType.TEXT_EVENT_STREAM_VALUE)
-    public Flux<GuestDTO> getAllGuests() {
-        return guestService.findAllGuests()
-            .delayElements(Duration.ofMillis(100)); // Backpressure control
-    }
-    
-    @GetMapping("/{id}")
-    public Mono<GuestDTO> getGuest(@PathVariable Long id) {
-        return guestService.findGuestById(id)
-            .switchIfEmpty(Mono.error(new GuestNotFoundException(id)));
-    }
-    
-    @PostMapping
-    @ResponseStatus(HttpStatus.CREATED)
-    public Mono<GuestDTO> createGuest(@Valid @RequestBody Mono<GuestDTO> guestDTO) {
-        return guestDTO.flatMap(guestService::createGuest);
+    public Flux<GuestDTO> getAll() {
+        return guestService.findAll();
     }
 }
 ```
 
-### Reactive Service Layer
-```java
-@Service
-public class GuestServiceImpl implements GuestService {
-    
-    private final GuestRepository guestRepository;
-    private final WebClient webClient;
-    
-    public Flux<GuestDTO> findGuestsWithBookings() {
-        return guestRepository.findAll()
-            .flatMap(guest -> 
-                webClient.get()
-                    .uri("/bookings/guest/{guestId}", guest.getId())
-                    .retrieve()
-                    .bodyToFlux(BookingDTO.class)
-                    .collectList()
-                    .map(bookings -> GuestMapper.toDTO(guest, bookings))
-            );
-    }
-}
-```
+## 🧪 Testing
 
-## 🧪 Testing Reactive Components
-
-### WebTestClient Example
 ```java
 @SpringBootTest
 @AutoConfigureWebTestClient
 class GuestControllerTest {
-    
+
     @Autowired
     private WebTestClient webTestClient;
-    
+
     @Test
-    void getAllGuests_ReturnsFlux() {
-        webTestClient.get()
-            .uri("/api/guests")
+    void getAllGuests_ShouldReturnFlux() {
+        webTestClient.get().uri("/api/guests")
             .accept(MediaType.TEXT_EVENT_STREAM)
             .exchange()
-            .expectStatus().isOk()
-            .expectHeader().contentTypeCompatibleWith(MediaType.TEXT_EVENT_STREAM)
-            .expectBodyList(GuestDTO.class)
-            .hasSize(5);
-    }
-    
-    @Test
-    void createGuest_ReturnsMono() {
-        GuestDTO newGuest = new GuestDTO("John", "Doe", "john@email.com");
-        
-        webTestClient.post()
-            .uri("/api/guests")
-            .contentType(MediaType.APPLICATION_JSON)
-            .bodyValue(newGuest)
-            .exchange()
-            .expectStatus().isCreated()
-            .expectBody(GuestDTO.class)
-            .value(guest -> assertThat(guest.getEmail()).isEqualTo("john@email.com"));
+            .expectStatus().isOk();
     }
 }
 ```
 
-## 📊 Monitoring & Observability
+## 📊 Monitoring
 
-### Reactive Metrics
-- **Micrometer Metrics**: `/actuator/metrics`
-- **Reactive Streams Metrics**: `/actuator/metrics/reactor`
-- **Virtual Threads Metrics**: `/actuator/metrics/jvm.threads.virtual`
-
-### Health Checks
-```bash
-# Reactive health endpoints
-curl http://localhost:8080/actuator/health
-curl http://localhost:8080/actuator/health/liveness
-curl http://localhost:8080/actuator/health/readiness
-```
+- Health: `http://localhost:8081/actuator/health`
+- Metrics: `http://localhost:8081/actuator/metrics`
+- Circuit Breakers & Virtual Threads metrics available
 
 ## 🚢 Deployment
 
-### Dockerfile for Reactive Service
-```dockerfile
-FROM openjdk:21-jdk-slim
-WORKDIR /app
-
-# Use Class Data Sharing for faster startup
-ENV JAVA_TOOL_OPTIONS="-XX:+UseZGC -XX:+ZGenerational -Xmx512m"
-
-COPY target/*.jar app.jar
-EXPOSE 8080
-
-# Run with Virtual Threads enabled
-ENTRYPOINT ["java", "-XX:+EnableDynamicAgentLoading", "--enable-preview", "-jar", "app.jar"]
-```
-
-### Kubernetes Deployment
-```yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: guest-service
-spec:
-  replicas: 3
-  template:
-    spec:
-      containers:
-      - name: guest-service
-        image: guest-service:reactive
-        ports:
-        - containerPort: 8080
-        env:
-        - name: JAVA_TOOL_OPTIONS
-          value: "-XX:+UseZGC -XX:+ZGenerational --enable-preview"
-        resources:
-          requests:
-            memory: "512Mi"
-            cpu: "250m"
-          limits:
-            memory: "1Gi"
-            cpu: "500m"
-```
-
-## 🎯 Java 21 Features Used
-
-### Virtual Threads
-```java
-@Configuration
-public class VirtualThreadConfig {
-    
-    @Bean
-    public TomcatProtocolHandlerCustomizer<?> protocolHandlerVirtualThreadExecutorCustomizer() {
-        return protocolHandler -> 
-            protocolHandler.setExecutor(Executors.newVirtualThreadPerTaskExecutor());
-    }
-}
-```
-
-### Pattern Matching & Records
-```java
-public record GuestResponse(Long id, String name, String email) {}
-
-public Mono<GuestResponse> processGuest(Object guest) {
-    return switch (guest) {
-        case GuestEntity entity -> Mono.just(new GuestResponse(
-            entity.getId(), 
-            entity.getFullName(), 
-            entity.getEmail()
-        ));
-        case GuestDTO dto -> Mono.just(new GuestResponse(
-            dto.id(), 
-            dto.firstName() + " " + dto.lastName(), 
-            dto.email()
-        ));
-        default -> Mono.error(new IllegalArgumentException("Unknown guest type"));
-    };
-}
-```
-
-## 📈 Performance Benefits
-
-- **10x higher throughput** compared to traditional servlet-based services
-- **Efficient memory usage** with non-blocking I/O
-- **Better scalability** with virtual threads
-- **Lower latency** with reactive streams backpressure
+Each service includes a ready-to-use `Dockerfile` optimized for Java 21.
 
 ## 🤝 Contributing
 
-1. Ensure you have Java 21 installed
-2. Use reactive patterns (Mono/Flux) for new features
-3. Write reactive tests with WebTestClient
-4. Follow reactive best practices
+1. Follow `com.group.learn.*` package structure
+2. Prefer reactive patterns (`Mono`/`Flux`)
+3. Use OpenFeign for inter-service communication
+4. Add tests with `WebTestClient`
+5. Update this README when adding new features
 
 ## 📄 License
 
-Apache 2.0 - See [LICENSE](LICENSE)
+Apache License 2.0 — see [LICENSE](LICENSE) file.
 
-## 👤 Author
+---
 
-**VicheaStack** - Modern Java & Reactive Systems Enthusiast
+**Made by [VicheaStack](https://github.com/VicheaStack)** — Modern Java & Reactive Systems.
 
-## 🌟 Star History
-
-[![Star History Chart](https://api.star-history.com/svg?repos=VicheaStack/Agoda-Microservice&type=Date)](https://star-history.com/#VicheaStack/Agoda-Microservice&Date)
 ```
 
-This README highlights your modern tech stack and helps showcase your expertise with cutting-edge Java technologies!
+Just copy everything above (including the first ```markdown:disable-run
+
+Would you like any last tweaks before you use it?
+```
